--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -141,7 +141,7 @@ However, its reliability measures are mixed, and associations of *n*-back perfor
 
 A way to quantify the subjective cost of each *n*-back level has been developed by Westbrook, Kester, and Braver[-@Westbrook2013], called the Cognitive Effort Discounting Paradigm (COG-ED).
 First, the participants complete the *n*-back levels to familiarize themselves with the task.
-Then, 1-back is compared with each more difficult level by asking the participants to decide between receiving 2\$ for the more difficult level or 1\$ for 1-back.
+Then, 1-back is compared with each more difficult level by asking the participants to decide between receiving a fixed 2\$ for the more difficult level or the flexible starting value of 1\$ for 1-back.
 If they choose the more difficult level, the reward for 1-back increases by 0.50\$, if they choose 1-back, it decreases by 0.50\$.
 This is repeated five more times, with each adjustment of the 1-back reward being half of the previous step, while the reward for the more difficult level remains fixed at 2\$.
 The idea is to estimate the point of subjective equivalence, i.e., the monetary ratio at which both offers are equally preferred[@Westbrook2013].
@@ -156,32 +156,13 @@ Additionally, it has been shown that individuals avoid cognitive effort only to 
 However, the relation of NFC and SVs might be confounded, since other studies utilizing the COG-ED paradigm found the association of NFC and SVs to disappear after correcting for performance[@Kramer2021] or found no association of NFC and SVs at all[@Crawford2021].
 On the other hand, task load has been shown to be a better predictor of SVs than task performance[@Culbreth2016; @Westbrook2013; @Westbrook2019], so more research is needed to shed light on this issue.
 
-With the present study, we alter one fundamental assumption of the original COG-ED paradigm: that the easiest *n*-back level has the highest SV.
-We therefore adapted the COG-ED paradigm in such a way that it allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
-Figure\ 1 illustrates how different modifications of the COG-ED paradigm return SVs that do or do not reflect the true preference of a hypothetical participant, who likes 2-back most, 3-back less, and 1-back least.
-The COG-ED paradigm sets the SV of 1-back to 1, regardless of the response pattern.
-Adding a comparison of 2-back and 3-back allows the SVs of those two levels to be more differentiated, but leaves the SV of 1-back unchanged.
-Adding three more comparisons of the same levels but using the easier level as reference does approach the true preference, but has two disadvantages.
-First, the SVs are still quite alike among levels due to the fact that every more difficult level has only been compared with the easiest level, and second, having more task levels would lead to an exponential increase in comparisons.
-Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one effort discounting round for each possible pair of levels, and by starting each round with a choice between equal rewards.
-For example, the participant is presented with the choice of receiving 1€ for 2-back or 1€ for 4-back.
-The level chosen by the participant will then be used as the level with a flexible value, which starts at 1€ and is changed in every iteration.
-The level that was not chosen will be set to a fixed value of 2€.
-This procedure allows to compute SVs based on actual individual preference instead of objective task load.
-Each level's SV is calculated as the mean of this level's SVs from all comparisons in which it appeared.
-If the participant has a clear preference for one level, this level's SV will be 1.
-If not, then no level's SV will be 1, but each level's SV can still be interpreted as an absolute and relative value, so each participant's effort discounting behaviour can still be quantified.
+With the present study, we alter one fundamental assumption of the original COG-ED paradigm: That the easiest *n*-back level has the highest SV.
+We therefore adapted the COG-ED paradigm in a way that allows the computation of SVs for different *n*-back levels without presuming that all individuals inherently prefer the easiest level.
 Since we also aim to establish this paradigm for the assessment of tasks with no objective task load, e.g., emotion regulation tasks[@ScheffelZerna2022], we call it the Cognitive and Affective Discounting Paradigm (CAD).
 In the present study, we will validate the CAD paradigm by conceptually replicating the findings of Westbrook et al.[-@Westbrook2013].
 Additionally, we will compare the effort discounting behavior of participants regarding the *n*-back task and an emotion regulation task.
 The full results of the latter will be published in a second Registered Report[@ScheffelZerna2022].
 The COG-ED paradigm has been applied to tasks in different domains before, showing that SVs across task domains correlate [@Crawford2021], but these tasks had an objective order of task load, which is not the case for the choice of emotion regulation strategies or other paradigms where there is no objective order of task load.
-
-```{r figure1, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a hypothetical participant with the true preference 2-back > 3-back > 1-back. The grey boxes are the choice options shown to the participant. The participant's final reward value of the flexible level is displayed after the first arrow. The resulting subjective value of each level is displayed after the second arrow, in the notation \"SV 3-back(1-back)\" for the subjective value of 3-back when 1-back is the other choice. The Solution and Additional Benefit panel follow the same logic, but are preceded by a choice between equal rewards, and the participant's first choice indicated by an exclamation mark.", fig.pos="H"} 
-  
-  include_graphics(here("99_Thinktank", "Other", "Paradigm_Scheme.png"))
-
-```
 
 Our hypotheses were derived from the results of Westbrook et al.[-@Westbrook2013].
 As a manipulation check, we hypothesize that with increasing *n*-back level the (1a) the signal detection parameter *d'* declines, while (1b) reaction time and (1c) perceived task load increase.
@@ -204,6 +185,34 @@ Participants will receive 30€ in total or course credit for participation.
 
 ## Design
 
+### CAD Paradigm
+Figure\ 1 illustrates how different modifications of the COG-ED paradigm [@Westbrook2013] return SVs that do or do not reflect the true preference of a hypothetical participant, who likes 2-back most, 3-back less, and 1-back least (for reasons of clarity there are only three levels in the example).
+The COG-ED paradigm, which compares every more difficult level with 1-back sets the SV of 1-back to 1, regardless of the response pattern.
+Adding a comparison of the more difficult levels with each other allows the SVs of those two levels to be more differentiated, but leaves the SV of 1-back unchanged.
+Adding those same pairs again, but with the oppositve assignment of fixed and flexible level, does approach the true preference, but has two disadvantages.
+First, the SVs are still quite alike across levels due to the fact that every more difficult level has only been compared with the easiest level, and second, having more task levels than just three would lead to an exponential increase in comparisons.
+Therefore, the solution lies in reducing the number of necessary comparisons by presenting only one effort discounting round for each possible pair of levels after determining for each pair which level should be fixed and which should be flexible.
+In each pair, the level chosen by the participant at least two out of three times will be used as the level with a flexible value, which starts at 1€ and is changed in every iteration.
+The other level in the pair will be set to a fixed value of 2€.
+Then, the effort discounting sensu Westbrook [-@Westbrook2013] begins, but with all possible pairs and with the individually determined assignment of fixed and flexible level.
+The order in which the pairs are presented will be fully randomized, and each pair will go through all iteration steps of adding/subtracting 0.50\ €, 0.25\ €, 0.13\ €, 0.06\ €, 0.03\ €, 0.02\ € to/from the flexible level's reward (each adjustment half of the previous one, rounded to two decimals) before moving on to the next one.
+This procedure allows to compute SVs based on actual individual preference instead of objective task load.
+For each pair, the SV of the flexible level is 1, as it was preferred when faced with equal rewards, and the SV of the fixed level is the final reward of the flexible level divided by 2\ €.
+Each level's "global" SV is calculated as the mean of this level's SVs from all pairs in which it appeared.
+If the participant has a clear preference for one level, this level's SV will be 1.
+If not, then no level's SV will be 1, but each level's SV can still be interpreted as an absolute and relative value, so each participant's effort discounting behaviour can still be quantified.
+The interpretation of SVs in Westbrook [-@Westbrook2013] was "The minimum relative reward required for me to choose 1-back over this level".
+So if the SV of 3-back was 0.6, the participant would need to be rewarded with at least 60\ % of what they are being offered for doing 3-back to do 1-back instead, forgoing the higher reward for 3-back.
+In this study, the SV can be interpreted as "The minimum relative reward required for me to choose any other level over this level".
+Therefore, an SV of 1 indicates that this level is preferred over all others, while SVs lower than 1 indicate that in at least one pair, a different level was preferred over this one.
+
+```{r figure1, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a hypothetical participant with the true preference 2-back > 3-back > 1-back. The grey boxes are the choice options shown to the participant. The participant's final reward value of the flexible level is displayed after the first arrow. The resulting subjective value of each level is displayed after the second arrow, in the notation \"SV 3-back(1-back)\" for the subjective value of 3-back when 1-back is the other choice. The Solution and Additional Benefit panel follow the same logic, but are preceded by a choice between equal rewards, and the participant's first choice indicated by an exclamation mark.", fig.pos="H"} 
+  
+  include_graphics(here("99_Thinktank", "Other", "Paradigm_Scheme.png"))
+
+```
+
+### Study procedure
 Healthy participants aged 18 to 30\ years will be recruited using the software *ORSEE*[@Greiner2015].
 Participants will complete the personality questionnaires online and then visit the lab for two sessions one week apart.
 NFC will be assessed using the 16-item short form of the Need for Cognition Scale [@Cacioppo1984; @Bless1994].
@@ -215,15 +224,10 @@ In the first session, participants provide informed consent and demographic data
 The paradigm starts with the *n*-back levels one to four, presented sequentially with two runs per level, consisting of 64 consonants (16 targets, 48 non-targets) per run.
 The levels are referred to by color (1-back black, 2-back red, 3-back blue, 4-back green) to avoid anchor effects in the effort discounting procedure.
 To assess perceived task load, we will use the 6-item NASA Task Load Index (NASA-TLX)[@Hart1988], where participants evaluate their subjective perception of mental load, physical load, effort, frustration, performance, and time pressure during the task on a 20-point scale.
-After each level, participants fill out the NASA-TLX on a tablet.
-Then, they complete the effort discounting procedure on screen and are instructed to do so as realistically as possible, even though the displayed rewards will not be paid out on top of their compensation.
-They are told that one of their choices will be randomly picked for the final run of *n*-back, the data of which will not be analyzed as it serves to incentivise truthful behavior.
-The procedure starts with a presentation of each possible pair of *n*-back levels, and the participants click on the level they would rather do for a reward of 1\ €.
-Each pair is presented three times in total, with the order of presentation and the matter of which level is presented left/right fully randomized between participants.
-After these 18 decisions, the paradigm assigns which level is flexible or fixed within each pair, based on which level was chosen at least twice or at the maximum once, respectively.
-Then the effort discounting sensu Westbrook [@Westbrook2013] begins, with the pairs being presented in randomized order.
-Each pair goes through all six iteration steps before moving on to the next pair.
-After the computer paradigm, participants will fill out a short questionnaire on the tablet, indicating whether they have adhered to the instructions (yes/no) and what the primary motivation for their decisions during the effort discounting procedure was (avoid boredom/relax/avoid effort/seek challenge/other).
+At the end of each level, participants fill out the NASA-TLX on a tablet.
+After the *n*-back task, participants complete the CAD paradigm on screen and are instructed to do so as realistically as possible, even though the displayed rewards will not be paid out on top of their compensation.
+They are told that one of their choices will be randomly picked for the final run of *n*-back, the data of which will not be analyzed as it only serves to incentivise truthful behavior and stay close to the design of Westbrook [-@Westbrook2013].
+After the CAD paradigm, participants will fill out a short questionnaire on the tablet, indicating whether they have adhered to the instructions (yes/no) and what the primary motivation for their decisions during the effort discounting procedure was (avoid boredom/relax/avoid effort/seek challenge/other).  
 The second session consists of an emotion regulation task with negative pictures and the instruction to suppress facial reactions, detach cognitively from the picture content, and distract oneself, respectively.
 The paradigm follows the same structure of task and effort discounting procedure, but participants can decide which strategy they want to reapply in the last block.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden[@Harris2009; @Harris2019].
